[gd_scene load_steps=3 format=3 uid="uid://cc7l2ffhkq17i"]

[ext_resource type="Script" path="res://examples/dynamic_multiplayer/scripts/player_menu.gd" id="1_kw4ml"]
[ext_resource type="LabelSettings" uid="uid://dl6nxapjyu6q4" path="res://examples/dynamic_multiplayer/resources/menu_label_settings.tres" id="2_ra7gm"]

[node name="PlayerMenu" type="PanelContainer"]
offset_right = 124.0
offset_bottom = 101.0
script = ExtResource("1_kw4ml")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ButtonsContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = ExtResource("2_ra7gm")
horizontal_alignment = 1

[node name="JoinButton" type="Button" parent="Margin/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join Game"

[node name="LeaveButton" type="Button" parent="Margin/ButtonsContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Leave Game"

[connection signal="pressed" from="Margin/ButtonsContainer/JoinButton" to="." method="instantiate_player"]
[connection signal="pressed" from="Margin/ButtonsContainer/LeaveButton" to="." method="quit_player"]
